# withings-api

./: .env.sample  .gitignore  Cargo.toml  README.md
examples/authorize/: get_access_token.rs  get_authorize_url.rs
examples/measure/: getmeas.rs
src/: error.rs  lib.rs
src/api/: cli.rs
src/auth/: cli.rs
